--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -123,9 +123,9 @@ ignored = [
   name = "github.com/mattn/go-isatty"
   version = "0.0.3"
 
-[[constraint]]
-  name = "github.com/mattn/go-sqlite3"
-  version = "1.6.0"
+## [[constraint]]
+##  name = "github.com/mattn/go-sqlite3"
+##  version = "1.6.0"
 
 [[constraint]]
   name = "github.com/opentracing/opentracing-go"
