--- a/pkg/cmd/grafana-server/app.yaml
+++ b/pkg/cmd/grafana-server/app.yaml
@@ -18,7 +18,7 @@ resources:
 # Must use an unprotected URL for liveness and readiness checks
 
 liveness_check:
-  path: "/login?zzz=liveness_check"
+  path: "/robots.txt?zzz=liveness_check"
   timeout_sec: 300
   check_interval_sec: 300
   failure_threshold: 10
@@ -26,7 +26,7 @@ liveness_check:
   initial_delay_sec: 3600
 
 readiness_check:
-  path: "/login?zzz=readiness_check"
+  path: "/robots.txt?zzz=readiness_check"
   timeout_sec: 300
   check_interval_sec: 300
   failure_threshold: 10
