--- a/pkg/cmd/grafana-server/static.yaml
+++ b/pkg/cmd/grafana-server/static.yaml
@@ -1,3 +1,4 @@
+# Static website for Grafana
 service: grafana-static
 
 runtime: go
@@ -5,7 +6,7 @@ api_version: go1.6
 
 # For failfast functionality, please use the 'X-AppEngine-FailFast' header on requests made to this service.
 # Default class for manual scaling is B2
-# instance_class: B4
+instance_class: B1
 manual_scaling:
   instances: 1
 
@@ -17,7 +18,7 @@ handlers:
 
 - url: /_ah/.*
   script: _go_app
-  
+
 - url: /public
   static_dir: public
 
